alignment issue resolved

--- a/src/components/viewUserInfo/viewUserInfo.css
+++ b/src/components/viewUserInfo/viewUserInfo.css
@@ -1,23 +1,5 @@
 .ContainerPlacing {
-  margin: 100px auto 0 250px;
-}
-
-.input:invalid:required {
-  box-shadow: 0 0 5px 1px;
-}
-.centerplacing {
-  text-align: center;
-}
-.ContainerPlacing ul {
-  padding: 0px;
-  margin: 0px;
-}
-.ContainerPlacing ul li {
-  list-style: none;
-  float: left;
-  margin: 10px 20px 30px 10px;
-  width: 30%;
-  text-align: left;
+  display: inline-block;
 }
 
 h5 {
@@ -28,14 +10,16 @@ h5 {
   background-color: #fafafa;
 }
 
-.margin {
-  margin: 10px 10px 10px;
-}
 
 .centerplacing {
-  text-align: center;
+  margin-left: 400px !important;
 }
 
-.margin {
-  margin: 10px 10px 10px !important;
+.userInfo {
+  margin-top: 0px !important;
+  margin-left: 10%;
+}
+.buttonmargin {
+  margin-left: 300px !important;
+  margin-bottom: 20px !important;
 }
